# mkElmDerivation

./: .dir-locals.el  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.org  HaskellNixTemplate.cabal  LICENSE  README.org  elmData.json  elmNixFailure.json  failures  failures.json  flake.nix  mkElmDerivation.cabal  mkElmDerivation.nix  mkElmSpaDerivation.nix  package.elm-lang.org.json
.github/workflows/: CI.yml  update_elm_data.yml
lib/: Lib.hs
lib/MkElmDerivation/: Conduits.hs  GetPackages.hs  MapHelpers.hs  Types.hs
mkElmDerivation/: all-packages.json  elm-failures.json  elm-hashes.json  lib.nix
nix/: lib.nix  mkCEADerivation.nix  mkElmDerivation.nix  mkElmPagesDerivation.nix  mkElmSpaDerivation.nix  mkElmWatchDerivation.nix
src/: CHANGELOG.org  Main.hs  mkElmDerivation.cabal
src/elmHasher/: default.nix  elmHasher.cabal
src/elmHasher/lib/MkElmDerivation/: Conduits.hs
src/elmHasher/src/: Conduits.hs  ElmHasher.hs  GetPackages.hs  Main.hs  MapHelpers.hs  Types.hs
src/lib/MkElmDerivation/: Conduits.hs  GetPackages.hs
src/snapshot/: LICENSE  README.org  default.nix  snapshot.cabal
src/snapshot/src/: Main.hs  Snapshot.hs
src/src/: Main.hs
tests/basic/: default.nix
tests/basic/src/: Main.elm
tests/custom/: default.nix
tests/dotElm/: default.nix  elm.json
tests/dotElm/public/: index.html
tests/elm-docs/: default.nix
tests/elm-level-2/: .gitignore  default.nix
