cabal-version:      2.4
name:               mkElmDerivation
version:            0.1.1.0

-- A short (one-line) description of the package.
-- synopsis: A Nix Flake for simplifiying the packaging of Elm projects, based on elm2nix.

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports: https://github.com/jeslie0/mkElmDerivation/issues

-- The license under which the package is released.
-- license: MIT
author:             James Leslie
maintainer:         jamesleslie@posteo.net

extra-source-files: CHANGELOG.org

executable Main
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    aeson,
                      base,
                      bytestring,
                      containers,
                      cryptonite,
                      directory,
                      http-conduit,
                      http-types,
                      mtl,
                      text,
                      threads-pool,
                      transformers,
                      vector
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -O2 -threaded