cabal-version:      2.4
name:               elmHasher
version:            0.2.0.0


description: This package is used by a GitHub action to fetch a JSON
             of all Elm packages, then download and hash them all.
             It updates several JSONs with this data, allowing for
             the nix expression mkElmDerivation to build without
             knowing the user needing change anything.

-- A URL where users can report bugs.
-- bug-reports: https://github.com/jeslie0/mkElmDerivation/issues

-- The license under which the package is released.
license: MIT
author:             James Leslie
maintainer:         jamesleslie@posteo.net

extra-source-files: CHANGELOG.org
library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     MkElmDerivation.Types
                       MkElmDerivation.MapHelpers
                       MkElmDerivation.GetPackages
                       MkElmDerivation.Conduits
  build-depends:       aeson,
                       base,
                       bytestring,
                       conduit,
                       conduit-extra,
                       cryptonite,
                       directory,
                       hashable,
                       http-conduit,
                       http-types,
                       memory,
                       mtl,
                       text,
                       threads-pool,
                       transformers,
                       unordered-containers,
                       vector
executable ElmHasher
    main-is:          ElmHasher.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    aeson,
                      base,
                      bytestring,
                      unordered-containers,
                      cryptonite,
                      conduit,
                      conduit-extra,
                      directory,
                      hashable,
                      http-conduit,
                      http-types,
                      memory,
                      mtl,
                      elmHasher,
                      text,
                      threads-pool,
                      transformers,
                      vector
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -main-is ElmHasher -O2 -threaded