cabal-version:      2.4
name:               elmHasher
version:            0.2.0.1


description: This package is used by a GitHub action to fetch a JSON
             of all Elm packages, then download and hash them all.
             It updates several JSONs with this data, allowing for
             the nix expression mkElmDerivation to build without
             knowing the user needing change anything.

bug-reports: https://github.com/jeslie0/mkElmDerivation/issues

license: MIT
author:             James Leslie
maintainer:         jamesleslie@posteo.net

extra-source-files: CHANGELOG.org

executable elmHasher
    main-is:          Main.hs

    other-modules: Types,
                   MapHelpers,
                   GetPackages,
                   Conduits

    other-extensions: ScopedTypeVariables,
                      OverloadedStrings
                      
    build-depends:    aeson,
                      base,
                      bytestring,
                      unordered-containers,
                      cryptonite,
                      conduit,
                      conduit-extra,
                      directory,
                      hashable,
                      http-conduit,
                      http-types,
                      memory,
                      mtl,
                      text,
                      threads-pool,
                      transformers,
                      vector

    hs-source-dirs:   src

    default-language: Haskell2010

    ghc-options: -O2 -threaded
