cabal-version:      2.4
name:               Snapshot

version:            0.1.0.0
author:             James Leslie
maintainer:         jamesleslie@posteo.net

executable Snapshot
    main-is:          Snapshot.hs
    build-depends: base
                 , aeson
                 , bytestring
                 , binary
                 , containers
                 , directory
                 , mtl
                 , text
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -main-is Snapshot -O2 -threaded