cabal-version:      2.4
name:               Snapshot

description:        This package is mostly taken from elm2nix, with some
                    minor modifications. It is used by the nix expression mkElmDerivation
                    to build the binary blob registry.dat, which is then allows Elm to
                    function properly.
             
version:            0.1.0.1

author:             James Leslie

maintainer:         jamesleslie@posteo.net

license:            BSD-3-Clause

executable Snapshot
    main-is:       Main.hs
    build-depends: base
                 , aeson
                 , bytestring
                 , binary
                 , containers
                 , directory
                 , mtl
                 , text
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -O2 -threaded